[package]
name = "stegano-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crc = "3.0.1"
png = "0.17.11"
